[gd_scene load_steps=3 format=3 uid="uid://ccn55vg0har05"]

[ext_resource type="Script" path="res://ui/score_line.gd" id="1_txpxn"]
[ext_resource type="Theme" uid="uid://bwayc6rbhtvxj" path="res://assets/ui/theme/HEALTH_theme.tres" id="2_0rtkl"]

[node name="score_line" type="Control"]
custom_minimum_size = Vector2(495, 28)
layout_mode = 3
anchors_preset = 0
offset_right = 495.0
offset_bottom = 28.0
script = ExtResource("1_txpxn")

[node name="BackgroundRect" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.0862745)

[node name="PositionLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 2.0
offset_right = 40.0
offset_bottom = 27.0
theme = ExtResource("2_0rtkl")
theme_override_colors/font_color = Color(0.756863, 0.756863, 0.756863, 0.756863)
text = "1"
horizontal_alignment = 2
uppercase = true

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_right = 113.0
offset_bottom = 27.0
grow_horizontal = 2
theme = ExtResource("2_0rtkl")
theme_override_colors/font_color = Color(0.756863, 0.756863, 0.756863, 0.756863)
text = "Johnny"
horizontal_alignment = 1
uppercase = true

[node name="ScoreLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -109.0
offset_right = -8.0
offset_bottom = 27.0
grow_horizontal = 0
theme = ExtResource("2_0rtkl")
theme_override_colors/font_color = Color(0.756863, 0.756863, 0.756863, 0.756863)
text = "12345"
horizontal_alignment = 2
uppercase = true
